--- a/.github/workflows/master_pydemo.yml
+++ b/.github/workflows/master_pydemo.yml
@@ -28,12 +28,12 @@ jobs:
           source venv/bin/activate
       
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install -r demo/requirements.txt
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip release.zip demo/* -r
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
@@ -75,4 +75,5 @@ jobs:
         with:
           app-name: 'pydemo'
           slot-name: 'Production'
+          package: './demo'
           
