--- a/.github/workflows/master_ci.yml
+++ b/.github/workflows/master_ci.yml
@@ -7,7 +7,7 @@ name: Build and deploy Python app to Azure Web App - pythondemo
 on:
   push:
     branches:
-      - master
+      - practice
   workflow_dispatch:
 
 jobs:
@@ -30,10 +30,15 @@ jobs:
       - name: Install dependencies
         run: pip install -r demo/requirements.txt
         
-      - name: Run tests
+      - name: Run tests and generate report
         run: |
-          source venv/bin/activate
-          pytest demo/
+          pytest demo/ --junitxml=reports/test-results.xml
+
+      - name: Upload test report
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-results
+          path: demo/reports/test-results.xml
 
       - name: Zip artifact for deployment
         run: zip release.zip demo/* -r
