Added retention days

--- a/.github/workflows/master_ci.yml
+++ b/.github/workflows/master_ci.yml
@@ -50,6 +50,7 @@ jobs:
         with:
           name: test-results
           path: reports/test-results.xml
+          retention_days: 7
 
       - name: Publish test results to GitHub UI
         uses: dorny/test-reporter@v1
