--- a/.github/workflows/master_ci.yml
+++ b/.github/workflows/master_ci.yml
@@ -8,6 +8,8 @@ on:
   push:
     branches:
       - practice
+      - master
+  pull_request:
   workflow_dispatch:
 
 jobs:
@@ -73,7 +75,8 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+    needs: build    
+    if: github.ref == 'refs/heads/master'  # Only run on pushes to master
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
