--- a/.github/workflows/master_ci.yml
+++ b/.github/workflows/master_ci.yml
@@ -33,6 +33,10 @@ jobs:
       - name: Install dependencies
         run: pip install -r demo/requirements.txt
 
+      - name: Run type checker
+        run: |
+          pyright demo/
+
       - name: Run tests
         run: |
           pytest demo/ --junitxml=reports/test-results.xml
