--- a/.github/workflows/master_ci.yml
+++ b/.github/workflows/master_ci.yml
@@ -4,10 +4,12 @@
 
 name: Build and deploy Python app to Azure Web App - pythondemo
 
+# Trigger
 on:
   push:
     branches:
       - master
+  pull_request:
   workflow_dispatch:
 
 jobs:
@@ -66,3 +68,35 @@ jobs:
           path: |
             release.zip
             !venv/
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.ref == 'refs/heads/master'
+    environment:
+      name: 'Production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+    permissions:
+      id-token: write #This is required for requesting the JWT
+    steps:
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v4
+        with:
+          name: python-app
+      - name: Unzip artifact for deployment
+        run: unzip release.zip
+      
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_7EC7B62391284B0FABF26E1B56FF194B }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_FF8E18880BB44B6983E86B9AB074F322 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_5E6E185F120A4AF78557BE8177C45BE3 }}
+      - name: 'Deploy to Azure Web App'
+        uses: azure/webapps-deploy@v3
+        id: deploy-to-webapp
+        with:
+          app-name: 'pythondemo'
+          slot-name: 'Production'
+          package: './demo'
+          
